# career-pilot

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  Makefile  README.md  pyproject.toml
config/: cv.example.md  portals.example.yml  profile.example.yml
src/career_pilot/: __init__.py  cli.py  dashboard.py  evaluator.py  filter.py  gmail.py  models.py  pdf.py  scanner.py  scheduler.py  tracker.py
templates/: cv-template.html
